fix(pwa): resolve top bar overlap with ios status bar in standalone mode (close #556)

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@
   min-height: 30px;
 }
 
-@media screen and (display-mode: fullscreen) {
+@media screen and (display-mode: fullscreen), screen and (display-mode: standalone) {
   * {
     -webkit-tap-highlight-color: transparent;
   }
@@ -83,7 +83,7 @@
 }
 
 @supports (padding-top: env(safe-area-inset-top)) {
-  @media screen and (display-mode: fullscreen) {
+  @media screen and (display-mode: fullscreen), screen and (display-mode: standalone) {
     .app {
       padding-right: env(safe-area-inset-right);
       padding-left: env(safe-area-inset-left);
@@ -93,10 +93,6 @@
       padding-top: max(env(safe-area-inset-top), 20px);
       padding-left: env(safe-area-inset-left);
     }
-
-    /* .main {
-      padding-top: max(env(safe-area-inset-top), 20px);
-    } */
   }
 }
 
